# hasxiom-dsl

./: .gitignore  README.md  cabal.project  current_shell_meta.json  flake.nix  full_closure.dot  galaxy.dot  ghosts.dot  haskell_env.dot  hastorch-shell.nix  hasxiom  hasxiom-dsl.cabal  hydrate_layers.sh  identify-pillars  pinned-packages.nix  prune_ghosts.sh  schema.sql  shell.nix  sovereign-shell.nix  spider_log.txt
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  solver-plan  source-hashes  up-to-date
src/: ComputeDepth.hs  GeneratePin.hs  Hydrate.hs  IdentifyPillars.hi  IdentifyPillars.hs  Ingest.hs  IngestMetadata.hs  Main.hs  Sentry.hs  TestDSL.hs  TestSQL.hs  UpdateAttributes.hs
src/Hasxiom/: Core.hs  Language.hs
src/Hasxiom/Database/: Loader.hs  Postgres.hs
src/Hasxiom/MCP/: MCP.hs
tools/lakehouse/: flake.nix  schema.sql
tools/lakehouse/app/: Main.hs
tools/lakehouse/src/: Enrich.hs  Impact.hs  IngestLock.hs  NodeIngest.hs  Spider.hs  Tree.hs
