cabal-version: 3.0
name:          hasxiom-dsl
version:       0.1.0.0
license:       MIT
build-type:    Simple

common shared-properties
    ghc-options: -Wall -O2
    build-depends:
        base >= 4.14 && < 5,
        aeson,
        bytestring,
        containers,
        text,
        postgresql-simple
    default-language: Haskell2010

executable update-attributes
    import: shared-properties
    main-is: UpdateAttributes.hs
    hs-source-dirs: src

executable compute-depth
    import: shared-properties
    main-is: ComputeDepth.hs
    hs-source-dirs: src

executable identify-pillars
    import: shared-properties
    main-is: IdentifyPillars.hs
    hs-source-dirs: src

executable generate-pin
    import: shared-properties
    main-is: GeneratePin.hs
    hs-source-dirs: src
